Updated LSQB benchmark